--- a/template/default/index/index_index.html
+++ b/template/default/index/index_index.html
@@ -204,28 +204,24 @@
                       <div style="height:25px;"></div>
                       <div class="pic"><img src="{$list.pic}" alt="{$list.title}"></div>
 
-                      <div class="tc" style="font-size:20px;color:#221813;line-height:45px;visibility: hidden;">{$list.update_time|date='Y-m-d',###}</div>
+                      <div class="tc" style="font-size:20px;color:#221813;line-height:45px;">{$list.specs}</div>
                       <!-- <div class="tc" style="font-size:20px;color:#221813;line-height:45px">零售价: <span style="color:#ff9600">0</span>元</div> -->
                       <!-- <div class="tc" style="font-size:20px;color:#221813;line-height:45px">心脑血管清一清，血脂降了一身轻。</div> -->
                       <div style="height:10px;"></div>
-                      <div style="padding:5px 10px;border:1px solid #ccc;width:80px;margin:0 auto;">
-                        <div class="fl"><img src="__PUBLIC__/img/sample/mm.png" alt=""></div>
-                        <a href="{$list.url}">
-                          <div class="fl" style="padding-top:3px;padding-left:3px;color:#565656">查看更多</div>
-                        </a>
-                        <div class="cl"></div>
-                      </div>
+                        <div class="tac">
+                          <a href="{$list.url}" style="padding:10px;border:1px solid #ccc;width:80px;margin:0 auto">
+                              <img src="__PUBLIC__/img/sample/mm.png" alt="" style="vertical-align: text-top;"> <span  style="display:inline-block; padding-top:3px;padding-left:3px;color:#ffffff">查看更多</span>
+                          </a>
+                        </div>
                       <div class="li2">
                         <div style="height:200px;"></div>
                         <div class="tl" style="font-size:20px;color:#fff;line-height:35px">{$list.subtitle}</div>
                         <div style="height:30px;"></div>
-                        <div style="padding:5px 10px;border:1px solid #ccc;width:80px;margin:0 auto;">
-                          <div class="fl"><img src="__PUBLIC__/img/sample/nm.png" alt=""></div>
-                          <a href="{$list.url}" title="{$list.title}">
-                            <div class="fl" style="padding-top:3px;padding-left:3px;color:#fff">查看更多</div>
-                          </a>
-                          <div class="cl"></div>
-                        </div>
+                          <div class="tac">
+                            <a href="{$list.url}" style="padding:10px;border:1px solid #ccc;width:80px;margin:0 auto">
+                                <img src="__PUBLIC__/img/sample/nm.png" alt="" style="vertical-align: text-top;"> <span  style="display:inline-block; padding-top:3px;padding-left:3px;color:#ffffff">查看更多</span>
+                            </a>
+                          </div>
                       </div>
 
 
