调整首页海报效果fade

--- a/template/default/index/index_index.html
+++ b/template/default/index/index_index.html
@@ -43,6 +43,7 @@
     </div>
     <script type="text/javascript">
       var mySwiper = new Swiper('.pcbanner', {
+        effect : 'fade',
         preventIntercationOnTransition: true,
         speed: 600,
         autoplay: {
