更新左边栏

--- a/template/default/index/list_product.html
+++ b/template/default/index/list_product.html
@@ -49,7 +49,7 @@
                         
                     <div class="crumbs mian_adr" style="float:right;">
                         <p>
-                            <yunu:position cid="$cid" delimiter="&gt;&gt;" />
+                            <yunu:position cid="$cid" delimiter="&nbsp; &gt; &nbsp;" />
                         </p>
                     </div>
                 </div>
