--- a/template/default/index/css/yunu.css
+++ b/template/default/index/css/yunu.css
@@ -3042,12 +3042,10 @@ body {
 }
 
 .news_list ul li:hover a {
-  color: #036aac;
+  color: #ae3523;
 }
 
 .crumbs {
-  width: 100%;
-  height: 34px;
   background: #f2ebd8;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -3062,7 +3060,7 @@ body {
 }
 
 .crumbs p a {
-  font-size: 14px;
+  font-size: 16px;
   color: #5a5a5a;
   line-height: 34px;
 }
@@ -3345,7 +3343,7 @@ div.zoomMask {
   float: left;
   margin-right: 2%;
   padding-left: 17px;
-  background: url(../img/dian2.png) no-repeat 5px center;
+  background: url(../img/sample/li.png) no-repeat 5px center;
 }
 
 .hot_new .news_list li:nth-child(2n) {
@@ -3732,11 +3730,11 @@ div.zoomMask {
 }
 
 .case_list ul li:hover {
-  box-shadow: 0px 1px 10px 1px #036aac;
+  box-shadow: 0px 1px 10px 1px #ae3523;
 }
 
 .case_list ul li:hover .fr span {
-  color: #0071bf;
+  color: #ae3523;
 }
 
 
