--- a/template/default/wap/css/yunu.css
+++ b/template/default/wap/css/yunu.css
@@ -2169,11 +2169,11 @@ body {
   height: 70px;
   width: 100%;
   position: fixed;
-  background: #fff;
+  background: #f5efde;
   top: 0;
   left: 0;
   z-index: 99;
-  box-shadow: 0px 1px 10px 1px #ccc;
+  /* box-shadow: 0px 1px 10px 1px #ccc; */
 }
 
 .m_header .m_head_content .m_head_logo {
@@ -2242,12 +2242,14 @@ body {
 }
 
 .app_menu ul {
-  background: #000;
+  background: #f5efde;
+  /* box-shadow: 0px 1px 10px 1px #ccc;  */
+
 }
 
 .app_menu ul li {
   width: 100%;
-  border-bottom: 1px dashed #333;
+  border-bottom: 1px solid #999899;
 }
 
 .app_menu ul li > a {
@@ -2260,7 +2262,7 @@ body {
   width: 100%;
   height: 42px;
   line-height: 42px;
-  color: #999899;
+  color: #333;
   display: block;
   padding-left: 18px;
 }
