--- a/template/default/wap/public_footer.html
+++ b/template/default/wap/public_footer.html
@@ -1,7 +1,7 @@
     <div class="sun_footer">
         <div class="container">
-            <ul class="celarfix">
-                <li><a href="http://www.langfengyaoye.com/m/">
+            <ul class="celarfix fc">
+                <li><a href="<yunu:url name='home'/>">
 
 <i class="iconfont icon-shouye"></i>
 
@@ -12,15 +12,15 @@
                         <i class="iconfont icon-mobilephone"></i>
                         <p>电话</p>
                     </a></li>
-                <li><a href="http://www.langfengyaoye.com/m/message/">
+                <li><a href="/index.php?s=category/index&id=21">
                         <i class="iconfont icon-all"></i>
                         <p>分类</p>
                     </a></li>
-               <li><a href="http://www.langfengyaoye.com/m/about_mobile/m_sjdt.html">
+               <li><a href="/index.php?s=index/category/index&id=30">
                         <i class="iconfont icon-map"></i>
                         <p>位置</p>
                     </a></li>
-                <li class="share"><a href="javscript:;">
+                <li class="share"><a href="http://shop106003497.taobao.com/">
                         <i class="iconfont icon-cart"></i>
                         <p>淘宝</p>
                     </a></li>
